dsl_compiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statement statements
Rule 3     statements -> statement
Rule 4     statement -> declaration
Rule 5     statement -> assignment
Rule 6     statement -> print_statement
Rule 7     statement -> repeat_statement
Rule 8     statement -> cycle_statement
Rule 9     statement -> check_statement
Rule 10    declaration -> NUM IDENTIFIER ASSIGN expression
Rule 11    assignment -> IDENTIFIER ASSIGN expression
Rule 12    print_statement -> SHOW IDENTIFIER
Rule 13    repeat_statement -> WHILE LPAREN condition RPAREN LBRACE statements RBRACE
Rule 14    cycle_statement -> FOR LPAREN assignment SEMICOLON condition SEMICOLON assignment RPAREN LBRACE statements RBRACE
Rule 15    check_statement -> IF LPAREN condition RPAREN LBRACE statements RBRACE else_clause
Rule 16    else_clause -> ELSE LBRACE statements RBRACE
Rule 17    else_clause -> ELIF LPAREN condition RPAREN LBRACE statements RBRACE else_clause
Rule 18    else_clause -> <empty>
Rule 19    condition -> expression LT expression
Rule 20    condition -> expression GT expression
Rule 21    condition -> expression LE expression
Rule 22    condition -> expression GE expression
Rule 23    condition -> expression EQ expression
Rule 24    condition -> expression NE expression
Rule 25    expression -> expression PLUS term
Rule 26    expression -> expression MINUS term
Rule 27    expression -> term
Rule 28    term -> term MULTIPLY factor
Rule 29    term -> term DIVIDE factor
Rule 30    term -> factor
Rule 31    factor -> NUMBER
Rule 32    factor -> IDENTIFIER
Rule 33    factor -> LPAREN expression RPAREN

Terminals, with rules where they appear

ASSIGN               : 10 11
DIVIDE               : 29
ELIF                 : 17
ELSE                 : 16
EQ                   : 23
FOR                  : 14
GE                   : 22
GT                   : 20
IDENTIFIER           : 10 11 12 32
IF                   : 15
LBRACE               : 13 14 15 16 17
LE                   : 21
LPAREN               : 13 14 15 17 33
LT                   : 19
MINUS                : 26
MULTIPLY             : 28
NE                   : 24
NUM                  : 10
NUMBER               : 31
PLUS                 : 25
RBRACE               : 13 14 15 16 17
RPAREN               : 13 14 15 17 33
SEMICOLON            : 14 14
SHOW                 : 12
WHILE                : 13
error                : 

Nonterminals, with rules where they appear

assignment           : 5 14 14
check_statement      : 9
condition            : 13 14 15 17
cycle_statement      : 8
declaration          : 4
else_clause          : 15 17
expression           : 10 11 19 19 20 20 21 21 22 22 23 23 24 24 25 26 33
factor               : 28 29 30
print_statement      : 6
program              : 0
repeat_statement     : 7
statement            : 2 3
statements           : 1 2 13 14 15 16 17
term                 : 25 26 27 28 29

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statement statements
    (3) statements -> . statement
    (4) statement -> . declaration
    (5) statement -> . assignment
    (6) statement -> . print_statement
    (7) statement -> . repeat_statement
    (8) statement -> . cycle_statement
    (9) statement -> . check_statement
    (10) declaration -> . NUM IDENTIFIER ASSIGN expression
    (11) assignment -> . IDENTIFIER ASSIGN expression
    (12) print_statement -> . SHOW IDENTIFIER
    (13) repeat_statement -> . WHILE LPAREN condition RPAREN LBRACE statements RBRACE
    (14) cycle_statement -> . FOR LPAREN assignment SEMICOLON condition SEMICOLON assignment RPAREN LBRACE statements RBRACE
    (15) check_statement -> . IF LPAREN condition RPAREN LBRACE statements RBRACE else_clause

    NUM             shift and go to state 10
    IDENTIFIER      shift and go to state 11
    SHOW            shift and go to state 12
    WHILE           shift and go to state 13
    FOR             shift and go to state 14
    IF              shift and go to state 15

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    declaration                    shift and go to state 4
    assignment                     shift and go to state 5
    print_statement                shift and go to state 6
    repeat_statement               shift and go to state 7
    cycle_statement                shift and go to state 8
    check_statement                shift and go to state 9

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .

    $end            reduce using rule 1 (program -> statements .)


state 3

    (2) statements -> statement . statements
    (3) statements -> statement .
    (2) statements -> . statement statements
    (3) statements -> . statement
    (4) statement -> . declaration
    (5) statement -> . assignment
    (6) statement -> . print_statement
    (7) statement -> . repeat_statement
    (8) statement -> . cycle_statement
    (9) statement -> . check_statement
    (10) declaration -> . NUM IDENTIFIER ASSIGN expression
    (11) assignment -> . IDENTIFIER ASSIGN expression
    (12) print_statement -> . SHOW IDENTIFIER
    (13) repeat_statement -> . WHILE LPAREN condition RPAREN LBRACE statements RBRACE
    (14) cycle_statement -> . FOR LPAREN assignment SEMICOLON condition SEMICOLON assignment RPAREN LBRACE statements RBRACE
    (15) check_statement -> . IF LPAREN condition RPAREN LBRACE statements RBRACE else_clause

    $end            reduce using rule 3 (statements -> statement .)
    RBRACE          reduce using rule 3 (statements -> statement .)
    NUM             shift and go to state 10
    IDENTIFIER      shift and go to state 11
    SHOW            shift and go to state 12
    WHILE           shift and go to state 13
    FOR             shift and go to state 14
    IF              shift and go to state 15

    statement                      shift and go to state 3
    statements                     shift and go to state 16
    declaration                    shift and go to state 4
    assignment                     shift and go to state 5
    print_statement                shift and go to state 6
    repeat_statement               shift and go to state 7
    cycle_statement                shift and go to state 8
    check_statement                shift and go to state 9

state 4

    (4) statement -> declaration .

    NUM             reduce using rule 4 (statement -> declaration .)
    IDENTIFIER      reduce using rule 4 (statement -> declaration .)
    SHOW            reduce using rule 4 (statement -> declaration .)
    WHILE           reduce using rule 4 (statement -> declaration .)
    FOR             reduce using rule 4 (statement -> declaration .)
    IF              reduce using rule 4 (statement -> declaration .)
    $end            reduce using rule 4 (statement -> declaration .)
    RBRACE          reduce using rule 4 (statement -> declaration .)


state 5

    (5) statement -> assignment .

    NUM             reduce using rule 5 (statement -> assignment .)
    IDENTIFIER      reduce using rule 5 (statement -> assignment .)
    SHOW            reduce using rule 5 (statement -> assignment .)
    WHILE           reduce using rule 5 (statement -> assignment .)
    FOR             reduce using rule 5 (statement -> assignment .)
    IF              reduce using rule 5 (statement -> assignment .)
    $end            reduce using rule 5 (statement -> assignment .)
    RBRACE          reduce using rule 5 (statement -> assignment .)


state 6

    (6) statement -> print_statement .

    NUM             reduce using rule 6 (statement -> print_statement .)
    IDENTIFIER      reduce using rule 6 (statement -> print_statement .)
    SHOW            reduce using rule 6 (statement -> print_statement .)
    WHILE           reduce using rule 6 (statement -> print_statement .)
    FOR             reduce using rule 6 (statement -> print_statement .)
    IF              reduce using rule 6 (statement -> print_statement .)
    $end            reduce using rule 6 (statement -> print_statement .)
    RBRACE          reduce using rule 6 (statement -> print_statement .)


state 7

    (7) statement -> repeat_statement .

    NUM             reduce using rule 7 (statement -> repeat_statement .)
    IDENTIFIER      reduce using rule 7 (statement -> repeat_statement .)
    SHOW            reduce using rule 7 (statement -> repeat_statement .)
    WHILE           reduce using rule 7 (statement -> repeat_statement .)
    FOR             reduce using rule 7 (statement -> repeat_statement .)
    IF              reduce using rule 7 (statement -> repeat_statement .)
    $end            reduce using rule 7 (statement -> repeat_statement .)
    RBRACE          reduce using rule 7 (statement -> repeat_statement .)


state 8

    (8) statement -> cycle_statement .

    NUM             reduce using rule 8 (statement -> cycle_statement .)
    IDENTIFIER      reduce using rule 8 (statement -> cycle_statement .)
    SHOW            reduce using rule 8 (statement -> cycle_statement .)
    WHILE           reduce using rule 8 (statement -> cycle_statement .)
    FOR             reduce using rule 8 (statement -> cycle_statement .)
    IF              reduce using rule 8 (statement -> cycle_statement .)
    $end            reduce using rule 8 (statement -> cycle_statement .)
    RBRACE          reduce using rule 8 (statement -> cycle_statement .)


state 9

    (9) statement -> check_statement .

    NUM             reduce using rule 9 (statement -> check_statement .)
    IDENTIFIER      reduce using rule 9 (statement -> check_statement .)
    SHOW            reduce using rule 9 (statement -> check_statement .)
    WHILE           reduce using rule 9 (statement -> check_statement .)
    FOR             reduce using rule 9 (statement -> check_statement .)
    IF              reduce using rule 9 (statement -> check_statement .)
    $end            reduce using rule 9 (statement -> check_statement .)
    RBRACE          reduce using rule 9 (statement -> check_statement .)


state 10

    (10) declaration -> NUM . IDENTIFIER ASSIGN expression

    IDENTIFIER      shift and go to state 17


state 11

    (11) assignment -> IDENTIFIER . ASSIGN expression

    ASSIGN          shift and go to state 18


state 12

    (12) print_statement -> SHOW . IDENTIFIER

    IDENTIFIER      shift and go to state 19


state 13

    (13) repeat_statement -> WHILE . LPAREN condition RPAREN LBRACE statements RBRACE

    LPAREN          shift and go to state 20


state 14

    (14) cycle_statement -> FOR . LPAREN assignment SEMICOLON condition SEMICOLON assignment RPAREN LBRACE statements RBRACE

    LPAREN          shift and go to state 21


state 15

    (15) check_statement -> IF . LPAREN condition RPAREN LBRACE statements RBRACE else_clause

    LPAREN          shift and go to state 22


state 16

    (2) statements -> statement statements .

    $end            reduce using rule 2 (statements -> statement statements .)
    RBRACE          reduce using rule 2 (statements -> statement statements .)


state 17

    (10) declaration -> NUM IDENTIFIER . ASSIGN expression

    ASSIGN          shift and go to state 23


state 18

    (11) assignment -> IDENTIFIER ASSIGN . expression
    (25) expression -> . expression PLUS term
    (26) expression -> . expression MINUS term
    (27) expression -> . term
    (28) term -> . term MULTIPLY factor
    (29) term -> . term DIVIDE factor
    (30) term -> . factor
    (31) factor -> . NUMBER
    (32) factor -> . IDENTIFIER
    (33) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 28
    IDENTIFIER      shift and go to state 24
    LPAREN          shift and go to state 29

    expression                     shift and go to state 25
    term                           shift and go to state 26
    factor                         shift and go to state 27

state 19

    (12) print_statement -> SHOW IDENTIFIER .

    NUM             reduce using rule 12 (print_statement -> SHOW IDENTIFIER .)
    IDENTIFIER      reduce using rule 12 (print_statement -> SHOW IDENTIFIER .)
    SHOW            reduce using rule 12 (print_statement -> SHOW IDENTIFIER .)
    WHILE           reduce using rule 12 (print_statement -> SHOW IDENTIFIER .)
    FOR             reduce using rule 12 (print_statement -> SHOW IDENTIFIER .)
    IF              reduce using rule 12 (print_statement -> SHOW IDENTIFIER .)
    $end            reduce using rule 12 (print_statement -> SHOW IDENTIFIER .)
    RBRACE          reduce using rule 12 (print_statement -> SHOW IDENTIFIER .)


state 20

    (13) repeat_statement -> WHILE LPAREN . condition RPAREN LBRACE statements RBRACE
    (19) condition -> . expression LT expression
    (20) condition -> . expression GT expression
    (21) condition -> . expression LE expression
    (22) condition -> . expression GE expression
    (23) condition -> . expression EQ expression
    (24) condition -> . expression NE expression
    (25) expression -> . expression PLUS term
    (26) expression -> . expression MINUS term
    (27) expression -> . term
    (28) term -> . term MULTIPLY factor
    (29) term -> . term DIVIDE factor
    (30) term -> . factor
    (31) factor -> . NUMBER
    (32) factor -> . IDENTIFIER
    (33) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 28
    IDENTIFIER      shift and go to state 24
    LPAREN          shift and go to state 29

    condition                      shift and go to state 30
    expression                     shift and go to state 31
    term                           shift and go to state 26
    factor                         shift and go to state 27

state 21

    (14) cycle_statement -> FOR LPAREN . assignment SEMICOLON condition SEMICOLON assignment RPAREN LBRACE statements RBRACE
    (11) assignment -> . IDENTIFIER ASSIGN expression

    IDENTIFIER      shift and go to state 11

    assignment                     shift and go to state 32

state 22

    (15) check_statement -> IF LPAREN . condition RPAREN LBRACE statements RBRACE else_clause
    (19) condition -> . expression LT expression
    (20) condition -> . expression GT expression
    (21) condition -> . expression LE expression
    (22) condition -> . expression GE expression
    (23) condition -> . expression EQ expression
    (24) condition -> . expression NE expression
    (25) expression -> . expression PLUS term
    (26) expression -> . expression MINUS term
    (27) expression -> . term
    (28) term -> . term MULTIPLY factor
    (29) term -> . term DIVIDE factor
    (30) term -> . factor
    (31) factor -> . NUMBER
    (32) factor -> . IDENTIFIER
    (33) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 28
    IDENTIFIER      shift and go to state 24
    LPAREN          shift and go to state 29

    condition                      shift and go to state 33
    expression                     shift and go to state 31
    term                           shift and go to state 26
    factor                         shift and go to state 27

state 23

    (10) declaration -> NUM IDENTIFIER ASSIGN . expression
    (25) expression -> . expression PLUS term
    (26) expression -> . expression MINUS term
    (27) expression -> . term
    (28) term -> . term MULTIPLY factor
    (29) term -> . term DIVIDE factor
    (30) term -> . factor
    (31) factor -> . NUMBER
    (32) factor -> . IDENTIFIER
    (33) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 28
    IDENTIFIER      shift and go to state 24
    LPAREN          shift and go to state 29

    expression                     shift and go to state 34
    term                           shift and go to state 26
    factor                         shift and go to state 27

state 24

    (32) factor -> IDENTIFIER .

    MULTIPLY        reduce using rule 32 (factor -> IDENTIFIER .)
    DIVIDE          reduce using rule 32 (factor -> IDENTIFIER .)
    PLUS            reduce using rule 32 (factor -> IDENTIFIER .)
    MINUS           reduce using rule 32 (factor -> IDENTIFIER .)
    NUM             reduce using rule 32 (factor -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 32 (factor -> IDENTIFIER .)
    SHOW            reduce using rule 32 (factor -> IDENTIFIER .)
    WHILE           reduce using rule 32 (factor -> IDENTIFIER .)
    FOR             reduce using rule 32 (factor -> IDENTIFIER .)
    IF              reduce using rule 32 (factor -> IDENTIFIER .)
    $end            reduce using rule 32 (factor -> IDENTIFIER .)
    RBRACE          reduce using rule 32 (factor -> IDENTIFIER .)
    SEMICOLON       reduce using rule 32 (factor -> IDENTIFIER .)
    RPAREN          reduce using rule 32 (factor -> IDENTIFIER .)
    LT              reduce using rule 32 (factor -> IDENTIFIER .)
    GT              reduce using rule 32 (factor -> IDENTIFIER .)
    LE              reduce using rule 32 (factor -> IDENTIFIER .)
    GE              reduce using rule 32 (factor -> IDENTIFIER .)
    EQ              reduce using rule 32 (factor -> IDENTIFIER .)
    NE              reduce using rule 32 (factor -> IDENTIFIER .)


state 25

    (11) assignment -> IDENTIFIER ASSIGN expression .
    (25) expression -> expression . PLUS term
    (26) expression -> expression . MINUS term

    NUM             reduce using rule 11 (assignment -> IDENTIFIER ASSIGN expression .)
    IDENTIFIER      reduce using rule 11 (assignment -> IDENTIFIER ASSIGN expression .)
    SHOW            reduce using rule 11 (assignment -> IDENTIFIER ASSIGN expression .)
    WHILE           reduce using rule 11 (assignment -> IDENTIFIER ASSIGN expression .)
    FOR             reduce using rule 11 (assignment -> IDENTIFIER ASSIGN expression .)
    IF              reduce using rule 11 (assignment -> IDENTIFIER ASSIGN expression .)
    $end            reduce using rule 11 (assignment -> IDENTIFIER ASSIGN expression .)
    RBRACE          reduce using rule 11 (assignment -> IDENTIFIER ASSIGN expression .)
    SEMICOLON       reduce using rule 11 (assignment -> IDENTIFIER ASSIGN expression .)
    RPAREN          reduce using rule 11 (assignment -> IDENTIFIER ASSIGN expression .)
    PLUS            shift and go to state 35
    MINUS           shift and go to state 36


state 26

    (27) expression -> term .
    (28) term -> term . MULTIPLY factor
    (29) term -> term . DIVIDE factor

    PLUS            reduce using rule 27 (expression -> term .)
    MINUS           reduce using rule 27 (expression -> term .)
    NUM             reduce using rule 27 (expression -> term .)
    IDENTIFIER      reduce using rule 27 (expression -> term .)
    SHOW            reduce using rule 27 (expression -> term .)
    WHILE           reduce using rule 27 (expression -> term .)
    FOR             reduce using rule 27 (expression -> term .)
    IF              reduce using rule 27 (expression -> term .)
    $end            reduce using rule 27 (expression -> term .)
    RBRACE          reduce using rule 27 (expression -> term .)
    SEMICOLON       reduce using rule 27 (expression -> term .)
    RPAREN          reduce using rule 27 (expression -> term .)
    LT              reduce using rule 27 (expression -> term .)
    GT              reduce using rule 27 (expression -> term .)
    LE              reduce using rule 27 (expression -> term .)
    GE              reduce using rule 27 (expression -> term .)
    EQ              reduce using rule 27 (expression -> term .)
    NE              reduce using rule 27 (expression -> term .)
    MULTIPLY        shift and go to state 37
    DIVIDE          shift and go to state 38


state 27

    (30) term -> factor .

    MULTIPLY        reduce using rule 30 (term -> factor .)
    DIVIDE          reduce using rule 30 (term -> factor .)
    PLUS            reduce using rule 30 (term -> factor .)
    MINUS           reduce using rule 30 (term -> factor .)
    NUM             reduce using rule 30 (term -> factor .)
    IDENTIFIER      reduce using rule 30 (term -> factor .)
    SHOW            reduce using rule 30 (term -> factor .)
    WHILE           reduce using rule 30 (term -> factor .)
    FOR             reduce using rule 30 (term -> factor .)
    IF              reduce using rule 30 (term -> factor .)
    $end            reduce using rule 30 (term -> factor .)
    RBRACE          reduce using rule 30 (term -> factor .)
    SEMICOLON       reduce using rule 30 (term -> factor .)
    RPAREN          reduce using rule 30 (term -> factor .)
    LT              reduce using rule 30 (term -> factor .)
    GT              reduce using rule 30 (term -> factor .)
    LE              reduce using rule 30 (term -> factor .)
    GE              reduce using rule 30 (term -> factor .)
    EQ              reduce using rule 30 (term -> factor .)
    NE              reduce using rule 30 (term -> factor .)


state 28

    (31) factor -> NUMBER .

    MULTIPLY        reduce using rule 31 (factor -> NUMBER .)
    DIVIDE          reduce using rule 31 (factor -> NUMBER .)
    PLUS            reduce using rule 31 (factor -> NUMBER .)
    MINUS           reduce using rule 31 (factor -> NUMBER .)
    NUM             reduce using rule 31 (factor -> NUMBER .)
    IDENTIFIER      reduce using rule 31 (factor -> NUMBER .)
    SHOW            reduce using rule 31 (factor -> NUMBER .)
    WHILE           reduce using rule 31 (factor -> NUMBER .)
    FOR             reduce using rule 31 (factor -> NUMBER .)
    IF              reduce using rule 31 (factor -> NUMBER .)
    $end            reduce using rule 31 (factor -> NUMBER .)
    RBRACE          reduce using rule 31 (factor -> NUMBER .)
    SEMICOLON       reduce using rule 31 (factor -> NUMBER .)
    RPAREN          reduce using rule 31 (factor -> NUMBER .)
    LT              reduce using rule 31 (factor -> NUMBER .)
    GT              reduce using rule 31 (factor -> NUMBER .)
    LE              reduce using rule 31 (factor -> NUMBER .)
    GE              reduce using rule 31 (factor -> NUMBER .)
    EQ              reduce using rule 31 (factor -> NUMBER .)
    NE              reduce using rule 31 (factor -> NUMBER .)


state 29
